clusters/on-prem/apps/adguard-home/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: adguard-home
  namespace: adguard-home
  labels:
    app: adguard-home
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard-home
  serviceName: adguard-home
  template:
    metadata:
      labels:
        app: adguard-home
    spec:
      containers:
      - name: adguard-home
        image: adguard/adguardhome:latest
        ports:
          - containerPort: 53
            protocol: UDP
          - containerPort: 53
            protocol: TCP
          - containerPort: 3000
            protocol: TCP
        volumeMounts:
        - name: adguard-data
          mountPath: /opt/adguardhome/work
          subPath: work
        - name: adguard-data
          mountPath: /opt/adguardhome/conf
          subPath: conf
      terminationGracePeriodSeconds: 30
      volumes:
      - name: adguard-data
        persistentVolumeClaim:
          claimName: adguard-home-pvc
