clusters/on-prem/apps/adguard-home/ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: adguard-home-ingress
    namespace: adguard-home
    annotations:
        kubernetes.io/ingress.class: traefik
        cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
    tls:
        - hosts:
            - ENC[AES256_GCM,data:Gx1/4nSGeQingaYubrIMh4DRbjOt3oq10ffRiak=,iv:aM21eew8hu+n/7HV6Erc62KEHB4I7Ctfd7w35kfHgqA=,tag:oU+0/dS4AUV//bXJvuEkWQ==,type:str]
    rules:
        - host: ENC[AES256_GCM,data:Kwm0NQYO9Sz12zVQUG4u/uDR59O6M7XpnbMo/ng=,iv:4W3fjt+3YVvPP8uptfXNi87c8QKZmZ0DWNWi1pEZY+o=,tag:QRCUhiIZD3QSZTikdttltA==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: adguard-home-service
                        port:
                            number: 8082
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1xl8mrtu70kvhjdl2nva6dpt8wsy3fhmz6605fmwjujc3zztyeyzqd07nvv
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtMU9JRTVXbWlRZDBqVjJq
[...]
            N2kvCFOaN99r4tV4+2w63NJtrBUvxAN+Aab5dthEWOMGgiN8V4jPmg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2022-12-26T15:06:23Z"
    mac: ENC[AES256_GCM,data:4MycPNfyBAtZkJCESuz71YiCO4j7+qLls4MATwdfigBrMItCUJhvecARgpdt876X67dAvJmj8gdzFB3WCvEBLUwM1eMfeM0cYK8Z9Z86dNR3bIp8Ap4J3g1lJMWmR0zXxgTMxL5wlPldoskjm5kljH2q/XRU5D0a0HGw3kmSpO0=,iv:z9DEfWwvhL6fc94yj8WnJDY7FYULN8mGEZfe2BC54+M=,tag:f5PFTLnpVTYZwAJJs3Tu8w==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|email|dnsNames|hosts|host|externalIPs)$
    version: 3.7.3
